--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "font-awesome": "^4.7.0",
     "react": "^16.12.0",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.12.0",
     "react-id-generator": "^3.0.0",
     "react-router-dom": "^5.1.2",
