--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "font-awesome": "^4.7.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-datetime": "^2.16.3",
     "react-dom": "^16.12.0",
